@@ -41,6 +41,8 @@
 
 #define  streamCopyRecord         pstreamCopyRecord
 
+#define  streamInqGinfo           pstreamInqGinfo
+
 
 int     pstreamOpenWrite(const argument_t *argument, int filetype);
 int     pstreamOpenRead(const argument_t *argument);
@@ -63,5 +65,8 @@ void    pstreamWriteRecord(int pstreamID, double *data, int nmiss);
 void    pstreamWriteRecordF(int pstreamID, float *data, int nmiss);
 void    pstreamReadRecord(int pstreamID, double *data, int *nmiss);
 void    pstreamCopyRecord(int pstreamIDdest, int pstreamIDsrc);
+
+void    pstreamInqGinfo(int pstreamID, int *intnum, float *fltnum);
+
 
 #endif  /* _PSTREAM_H */
